--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 spring.application.name=practice
 
-jwt.secret = secret
+jwt.secret=your-secret-key-here-make-it-long-and-secure-in-production
 jwt.duration = 70000
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/auth
+#spring.flyway.enabled=true
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.flyway.enabled=true
+
+spring.datasource.username = postgres
+spring.datasource.password=password
+
+#logging.level.root = DEBUG
